Automate property evidence materialization
